--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,3 @@
-# When adding additional environment variables, the schema in "/src/env.js"
-# should be updated accordingly.
-
-# Prisma
-# https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="postgresql://postgres:[YOUR-PASSWORD]@localhost.supabase.co:6543/postgres?pgbouncer=true"
 DIRECT_URL="postgresql://postgres:[YOUR-PASSWORD]@localhost.supabase.co:5432/postgres"
+NEXT_PUBLIC_BASE_URL="http://localhost:3000"
